# omarksman

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  dune  dune-project  marksman.opam
.github/workflows/: ci.yml  release.yaml
lib/: config.ml  config.mli  dune  error.ml  error.mli  markdown.ml  marksman.ml  marksman.mli  server.ml  server.mli
scripts/: marksman-server.sh
test/: dune  marksman_test.ml
